assets/style.css
/* ... */
@media screen and (max-width: 800px) {
    #logo {
        font-size: 7vw;
    }

    .list {
        font-size: 3vw;
        margin-left: 25vw;
    }

    #suits-images-1 {
        visibility: hidden;
    }

    #suits-images-2 {
        visibility: hidden;
    }
}

@media screen and (max-width: 550px) {
    #logo {
        font-size: 8vw;
    }

    .list {
        font-size: 3.2vw;
        margin-left: 21vw;
    }
}

@media screen and (min-width: 1500px) {
    .card-is-flipped {
        transform: rotateY(-180deg) translateX(-110%);

    }

    .card-face--back {
        transform: rotateY(-180deg) translateX(121%);
        transition: transform 0.5s;

        background-image: url(images/playing-card-rear.png) !important;
    }
    
}



@media screen and (max-width: 1450px) {
    .card-is-flipped {
        transform: rotateY(-180deg) translateX(-110%);

    }

    .card-face--back {
        transform: rotateY(-180deg) translateX(119%);
        transition: transform 0.5s;

        background-image: url(images/playing-card-rear.png) !important;
    }
    
}

@media screen and (max-width: 1440px) {
    .card-is-flipped {
        transform: rotateY(-180deg) translateX(-110%);

    }

    .card-face--back {
        transform: rotateY(-180deg) translateX(115%);
        transition: transform 0.5s;

        background-image: url(images/playing-card-rear.png) !important;
    }
}


@media screen and (max-width: 1420px) {
    .card-is-flipped {
        transform: rotateY(-180deg) translateX(-100%);

    }

    .card-face--back {
        transform: rotateY(-180deg) translateX(104%);
        transition: transform 0.5s;

        background-image: url(images/playing-card-rear.png) !important;
    }
}

@media screen and (max-width: 1400px) {
    .card-is-flipped {
        transform: rotateY(-180deg) translateX(-100%);

    }

    .card-face--back {
        transform: rotateY(-180deg) translateX(102%);
        transition: transform 0.5s;

        background-image: url(images/playing-card-rear.png) !important;
    }
}

@media screen and (max-width: 1380px) {
    .card-is-flipped {
        transform: rotateY(-180deg) translateX(-100%);

    }

    .card-face--back {
        transform: rotateY(-180deg) translateX(100%);
        transition: transform 0.5s;

        background-image: url(images/playing-card-rear.png) !important;
    }
}

@media screen and (max-width: 1360px) {
    .card-is-flipped {
        transform: rotateY(-180deg) translateX(-100%);

    }

    .card-face--back {
        transform: rotateY(-180deg) translateX(100%);
        transition: transform 0.5s;

        background-image: url(images/playing-card-rear.png) !important;
    }
}

@media only screen and (max-width: 800px) {


    #start-button {
        width: 6rem;
        height: 6rem;
    }

    #score-button {
        width: 6rem;
        height: 6rem;
    }

    #mute-button {
        width: 6rem;
        height: 6rem;
    }
}

@media only screen and (max-width: 600px) {
    #start-button {
        width: 5rem;
        height: 5rem;
    }

    #score-button {
        width: 5rem;
        height: 5rem;
    }

    #mute-button {
        width: 5rem;
        height: 5rem;
    }
}

@media only screen and (max-width: 500px) {
    #start-button {
        width: 5rem;
        height: 5rem;
    }
    #score-button {
        width: 5rem;
        height: 5rem;
    }
    #mute-button {
        width: 5rem;
        height: 5rem;
    }


    #button-div {
        left: 34vw;
    }

    #score-progress{
        padding: 4px;
        margin-left: 1%;
    }

    #score-progress h3{
        font-size: 1.1em;
    }
}

@media only screen and (max-width: 400px) {
    #start-button {
        width: 4.5rem;
        height: 4.5rem;
    }

    #score-button {
        width: 4.5rem;
        height: 4.5rem;
    }
    #mute-button {
        width: 4.5rem;
        height: 4.5rem;
    }

    #button-div{
        left: 30vw;
    }

}

@media screen and (max-width: 700px) {
    #card-progress {
        display: inline;
        color: #fafafa;
        padding-right: 1%;
        padding-left: 1%;
        font-size: 4.8vw;
        background-color: black;
        border: 3px solid #fafafa;
        border-radius: 5px;
        position: relative;
        left: -3%;
    }

    #time {
        display: inline;
        color: #fafafa;
        padding-right: 1%;
        padding-left: 1%;
        font-size: 4.7vw;
        background-color: black;
        border: 3px solid #fafafa;
        border-radius: 5px;
        position: relative;
        margin-right: 23%;
    }

    #modal-content {
        height: 74vw;
        width: 54vw;
    }

    #guess {
        height: 48vw;
        width: 31vw;
        margin-left: 27%;
        margin-top: 20%;
        z-index: 1000;
        background-size: contain;
        background-repeat: no-repeat;
        display: block;
        position: absolute;
        left: -6%;
        top: -1%;
    }

    #next {
        width: 14vw;
        height: 8vw;
        background-color: darkslateblue;
        color: #fafafa;
        margin-left: 40%;
        position: absolute;
        border-radius: 10px;
        top: 79%;
        z-index: 1005;
        left: -3%;
        font-size: 2.1vw;
    }

    #end-of-guess {
        font-size: 3.6vw;
    }

    #button-div{
        left: 48vw;
    }
}

@media screen and (max-width: 500px) {
    #end-of-guess {
        font-size: 5vw;
    }

    #time {
        font-size: 6vw;
        margin-right: 12%;
    }

    #card-progress {
        font-size: 6vw;
        left: -15%;
    }

    #modal-content {
        height: 105vw;
        width: 76vw;
    }

    #guess {
        height: 64vw;
        width: 51vw;
    }

    #next {
        width: 21vw;
        height: 12vw;
        font-size: 3.2vw;
    }

    #button-div{
        left: 34vw;
    }
}
/* ... */

